--- a/control.html
+++ b/control.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="back__container">
-            <a href="/index.html" class="back__container-button">
+            <a href="index.html" class="back__container-button">
                 <ion-icon name="chevron-back-outline" class="back__container-icon"></ion-icon>
                 <div>BACK</div>
             </a>
