--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div class="section-home-page">
         <video autoplay loop muted plays-inline class="background-clip">
-            <source src="/images/video.mp4" type="video/mp4">
+            <source src="images/video.mp4" type="video/mp4">
         </video>
         <div class="section-home-page-title">
             <p class="section-home-page-title-hd">
@@ -35,7 +35,7 @@
                 Help conserve the environment with us.
             </p>
             <div class="section-home-page-buttom">
-                <a href="/control.html">START</a>
+                <a href="control.html">START</a>
             </div>
         </div>
     </div>
